# quantlit

./: .gitignore  LICENSE  README.md  pyproject.toml
quantlit/: portfolio.py  utils.py
quantlit/connection/: connector.py  error.py  market.py
quantlit/connection/crypto/: binance.py
quantlit/instrument/: __init__.py  interval.py  kline.py
quantlit/pairs_trading/: backtest.py  kalman_filter.py  model.py  policy.py  policy1.py  selection.py  strategy.py
quantlit/pairs_trading/model/: __init__.py  base.py  buy_and_hold.py  kalman_filter_ci.py  kalman_filter_pci.py  linear_regression_ci.py  mlp_kalman_filter_pci.py
