[tool.poetry]
name = "quantlit"
version = "0.1.0"
description = "Quant Library"
authors = ["Parutin Maxim <parutin.ma@phystech.edu>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python =  "^3.11"

pandas = "1.5"
matplotlib = "3.6"
numpy = "^1.26.0"
tqdm = "^4.66.1"
statsmodels = "^0.14.0"
streamlit = "^1.27.2"
sqlalchemy = "^2.0.22"
psycopg2 = "^2.9.9"
jupyter = "^1.0.0"
seaborn = "^0.13.0"
scikit-learn = "^1.4.2"
torch = "^2.3.0"
pykalman = "^0.9.7"
tikzplotlib = "^0.10.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"

[tool.black]
line-length = 80
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 80
lines_after_imports = 2

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
