[tool.poetry]
name = "quantlit"
version = "0.1.0"
description = "Quant Library"
authors = ["Parutin Maxim <parutin.ma@phystech.edu>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python =  "^3.11"

pandas = "1.5"
numpy = "^1.26.0"
tqdm = "^4.66.1"
statsmodels = "^0.14.0"
scikit-learn = "^1.4.2"
reflex = "^0.6.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"

[tool.black]
line-length = 80
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 80
lines_after_imports = 2

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
